--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.2.3",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1"
   }
