--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "live-server": "^1.2.1",
+    "validator": "^10.10.0",
     "webpack": "^4.28.3"
   },
   "devDependencies": {
