--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "license": "MIT",
   "scripts": {
     "serve": "live-server public/",
-    "build": "webpack --watch",
-    "build-babel": "babel src/app.js --out-file=public/scripts/app.js --presets=react,env --watch"
+    "build": "webpack",
+    "dev-server": "webpack-dev-server"
   },
   "dependencies": {
     "@babel/plugin-proposal-class-properties": "^7.2.3",
@@ -19,7 +19,8 @@
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "validator": "^10.10.0",
-    "webpack": "^4.28.3"
+    "webpack": "^4.28.3",
+    "webpack-dev-server": "^3.1.14"
   },
   "devDependencies": {
     "webpack-cli": "^3.2.0"
